--- a/src/res/css/main.css
+++ b/src/res/css/main.css
@@ -81,9 +81,9 @@
 .frontFlow .layerContent{text-align: center}
 .frontFlow .formBox{width: 5.7rem;margin: 0 auto}
 .frontFlow .formBox>div{width: 5.7rem;height: 0.6rem;margin-bottom: 0.16rem;border-radius: 0.08rem;overflow: hidden}
-.frontFlow .formBox>div input{width: 5.7rem;height: 0.6rem;border: 0;background: #f5f5f5;font-size: 0.24rem}
+.frontFlow .formBox>div input{width: 5.7rem;height: 0.6rem;border: 0;background: #f5f5f5;font-size: 0.24rem;-webkit-appearance:none;outline:none;border-radius: 0}
 .frontFlow .formBox .tel{width: 5.7rem;height: 0.6rem;padding: 0 0.3rem;box-sizing: border-box}
 .frontFlow .formBox .code{width:3.7rem;height: 0.6rem;padding: 0 0.3rem;box-sizing: border-box}
-.frontFlow .formBox .obtain{width:2rem;height: 0.6rem;padding: 0 0.3rem;box-sizing: border-box;color: #fff;background: #71b457;font-size: 0.24rem;border: 0;text-align: center}
+.frontFlow .formBox .obtain{width:2rem;height: 0.6rem;padding: 0 0.3rem;box-sizing: border-box;color: #fff;background: #71b457;font-size: 0.24rem;border: 0;text-align: center;}
 .frontFlow .orderBtn{width:1.2rem ;height: 0.5rem;line-height: 0.5rem;font-size: 0.24rem;color: #fff;border: 0;background: #e94d40;border-radius: 0.3rem;margin-top: 0.16rem}
 .frontFlow .layui-m-layer1 .layui-m-layercont{padding: 0.3rem;padding-top: 0}
